去除模糊音

--- a/installation.yaml
+++ b/installation.yaml
@@ -1,7 +1,8 @@
 distribution_code_name: "fcitx-rime"
 distribution_name: Rime
-distribution_version: 5.0.14
+distribution_version: 5.0.15
 install_time: "Fri Apr 29 08:42:21 2022"
-installation_id: "a80d9083-8e40-49a0-828c-c84ffb9ddca6"
+installation_id: iarch
 rime_version: 1.7.3
-update_time: "Sat Aug 13 14:09:40 2022"
+sync_dir: "/home/maruka/Documents/Nutstore/RimeData"
+update_time: "Tue Nov 22 00:40:33 2022"
