--- a/squirrel.custom.yaml
+++ b/squirrel.custom.yaml
@@ -39,45 +39,47 @@ patch:
       label_font_point: 12              #普通标签的字体大小      
       show_notifications_when: never
   app_options: 
-  co.zeit.hyper: 
-    ascii_mode: false 
-  com.alfredapp.Alfred: 
-    ascii_mode: true 
-  com.apple.Spotlight: 
-    ascii_mode: false 
-  com.apple.Terminal: 
-    ascii_mode: true 
-    no_inline: false 
-  com.apple.dt.Xcode:  
-    ascii_mode: false 
-  com.barebones.textwrangler: 
-    ascii_mode: false 
-  com.blacktree.Quicksilver: 
-    ascii_mode: false 
-  com.github.atom: 
-    ascii_mode: false 
-  com.google.Chrome: 
-    inline: false 
-  com.googlecode.iterm2: 
-    ascii_mode: true 
-    no_inline: false 
-  com.macromates.TextMate.preview: 
-    ascii_mode: false 
-  com.microsoft.VSCode: 
-    ascii_mode: false 
-  "com.runningwithcrayons.Alfred-2": 
-    ascii_mode: true 
-  com.sublimetext.2: 
-    ascii_mode: false 
-  org.gnu.Aquamacs: 
-    ascii_mode: false 
-  org.gnu.Emacs: 
-    ascii_mode: false 
-    no_inline: false 
-  org.vim.MacVim: 
-    ascii_mode: false 
-    no_inline: false 
-    vim_mode: true 
-  ru.keepcoder.Telegram: 
-    inline: false 
+    co.zeit.hyper: 
+      ascii_mode: false 
+    com.alfredapp.Alfred: 
+      ascii_mode: true 
+    com.apple.Spotlight: 
+      ascii_mode: false 
+    com.apple.Terminal: 
+      ascii_mode: true 
+      no_inline: false 
+    com.apple.dt.Xcode:  
+      ascii_mode: false 
+    com.barebones.textwrangler: 
+      ascii_mode: false 
+    com.blacktree.Quicksilver: 
+      ascii_mode: false 
+    com.github.atom: 
+      ascii_mode: false 
+    com.google.Chrome: 
+      inline: false 
+    com.googlecode.iterm2: 
+      ascii_mode: true 
+      no_inline: false 
+    com.macromates.TextMate.preview: 
+      ascii_mode: false 
+    com.microsoft.VSCode: 
+      ascii_mode: false 
+    "com.runningwithcrayons.Alfred-2": 
+      ascii_mode: true 
+    com.sublimetext.2: 
+      ascii_mode: false 
+    org.gnu.Aquamacs: 
+      ascii_mode: false 
+    org.gnu.Emacs: 
+      ascii_mode: false 
+      no_inline: false 
+    org.vim.MacVim: 
+      ascii_mode: false 
+      no_inline: false 
+      vim_mode: true 
+    ru.keepcoder.Telegram: 
+      inline: false 
+    md.obsidian:
+      vim_mode: true
 
